[Update]: auth controller
